# green-gap-affordable-housing

./: .gitignore  LICENSE  Makefile  README.md  _quarto.yml  claude.md  data-methods.qmd  index.qmd  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml
_freeze/notebooks/1.0-example-green-gap-demo/execute-results/: html.json
app/: app.py  buildings_types.geojson  housing_app.py  tracts.geojson  type_regression.json  type_stats.json  units_bg.geojson  units_tract.geojson
gee/: README.md  summer_environmental_rasters.js
greengap/: __init__.py  acs.py  assessor.py  bivariate.py  classify.py  dataset.py  features.py  gee.py  housing_type.py  noah_threshold.py  parcel_env.py  plots.py  rent.py  type_regression.py  type_regression_data.py
greengap/modeling/: predict.py  train.py
notebooks/: 1.0-example-green-gap-demo.ipynb
references/: Dewey-Data-Dict.xlsx  Green-Gap-Data-Sources.xlsx  data_and_methods.md  metadata_2022-Edition.xml  rent-based-noah-design.md  tax-assessor-crosswalk.md  tax-assessor-extraction.md  zoning-data-extraction.md
scripts/: build_shinylive.py
tests/: test_assessor.py  test_bivariate.py  test_classify.py  test_dataset.py  test_housing_type.py  test_noah_threshold.py  test_parcel_env.py  test_rent.py  test_type_corr.py  test_type_regression.py
